--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <script>
 
     const apiKey = "6da83e99ab572d4e98f1e297074ffd86";
-    
+    const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=beirut";
 
     
 
