--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     const apiKey = "6da83e99ab572d4e98f1e297074ffd86";
     const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=beirut";
 
-    
+    async function checkWeather(){
+        const response = await fetch(apiUrl + `&appid=${apiKey}`);
+        var data = await response.json();
+    }
 
 </script>
 
