--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="weather">
             <img src="images/rain.png" class="weather-icon">
-            <h1 class="temp">22°C</h1>
+            <h1 class="temp">22°c</h1>
             <h2 class="city">New York</h2>
             <div class="details">
                 <div class="col">
@@ -28,7 +28,7 @@
                 <div class="col">
                     <img src="images/wind.png">
                     <div>
-                        <p class="wind">15 KM/h</p>
+                        <p class="wind">15 Km/h</p>
                         <p>Wind Speed</p>
                     </div>
                 </div>
@@ -44,8 +44,16 @@
     async function checkWeather(){
         const response = await fetch(apiUrl + `&appid=${apiKey}`);
         var data = await response.json();
+
+        console.log(data);
+
+        document.querySelector(".city").innerHTML = data.name;
+        document.querySelector(".temp").innerHTML = data.main.temp + "°c";
+        document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+        document.querySelector(".wind").innerHTML = data.wind.speed + " Km/h";
     }
 
+checkWeather();
 </script>
 
 </body>
