--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
 <script>
 
     const apiKey = "6da83e99ab572d4e98f1e297074ffd86";
-    const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=beirut";
+    const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 
-    async function checkWeather(){
-        const response = await fetch(apiUrl + `&appid=${apiKey}`);
+    const searchBox = document.querySelector(".search input");
+    const searchBtn = document.querySelector(".search button");
+    
+
+    async function checkWeather(city){
+        const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
         var data = await response.json();
 
         console.log(data);
@@ -52,6 +56,10 @@
         document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
         document.querySelector(".wind").innerHTML = data.wind.speed + " Km/h";
     }
+
+searchBtn.addEventListener("click", ()=>{
+    checkWeather(searchBox.value);
+})
 
 checkWeather();
 </script>
