--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
 
     async function checkWeather(city){
         const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
-        var data = await response.json();
-
-        console.log(data);
+        var data = await response.json();      
 
         document.querySelector(".city").innerHTML = data.name;
         document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "°c";
@@ -71,6 +69,8 @@
         }else if(data.weather[0].main == "Mist"){
             weatherIcon.src = "images/mist.png";
         }
+
+        document.querySelector(".weather").style.display = "block";
     }
 
 searchBtn.addEventListener("click", ()=>{
